Everything simplified